--- a/React_Form_Ref/React_Form/package.json
+++ b/React_Form_Ref/React_Form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-reactform",
+  "name": "react-todo",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
