--- a/React_Style_Component/style_component/package.json
+++ b/React_Style_Component/style_component/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "style-components": "^0.1.0"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
