--- a/REDUX/TODO_REDUX_ASSIGN/package.json
+++ b/REDUX/TODO_REDUX_ASSIGN/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-todoapp-assign",
+  "name": "todo-redux-assign",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -21,6 +22,6 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.5"
+    "vite": "^2.9.6"
   }
 }
